--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Jellyfin",
-    "description": "The Free Software Media System",
+    "name": "N-Azul",
+    "description": "Anime Clasicos",
     "lang": "en-US",
-    "short_name": "Jellyfin",
+    "short_name": "NAZUL",
     "start_url": "index.html#!/home.html",
     "theme_color": "#101010",
     "background_color": "#101010",
