--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
     "baseUrl": "src",
     "target": "ES5",
     "lib": ["DOM", "DOM.Iterable", "ES2015"],
-    "ignoreDiagnostics": [2345],
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -17,7 +15,9 @@
     "checkJs": false,
     "strictNullChecks": true,
     "jsx": "react-jsx",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "noEmit": true,
+    "skipLibCheck": true,
   },
   "include": [
     "src"
